Added Loki and Loki-dud
Signed-off-by: Gopal S Akshintala <gopala.akshintala@salesforce.com>